kubernetes/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nexusdeploy
  labels:
    app.kubernetes.io/managed-by: kustomize
    environment: base
